--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,46 +16,38 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="/css/style.css" />
-  {{!--
-  <link rel="stylesheet" href="css/jass.css" /> --}}
   <title>Viva Chat</title>
 </head>
 
-{{!--
 
-<body class="d-flex flex-column min-vh-100"> --}}
+<body>
+  <header class="text-center text-white">
+    <h1 class="pt-3">Viva Chat</h1>
+    <!-- create login or logout link -->
 
-  <body>
-    <header class="text-center text-white">
-      <h1 class="pt-3">Viva Chat</h1>
-      <!-- create login or logout link -->
+    {{!-- <nav> --}}
+      {{!-- Conditionally render login or logout links
+      {{#if logged_in}}
+      <a href="/profile">profile</a> |
+      <button class="no-button" id="logout">logout</button>
+      {{else}}
+      <a href="/login">login</a>
+      {{/if}} --}}
 
-      <nav>
-        {{!-- Conditionally render login or logout links
-        {{#if logged_in}}
-        <a href="/profile">profile</a> |
-        <button class="no-button" id="logout">logout</button>
-        {{else}}
-        <a href="/login">login</a>
-        {{/if}} --}}
-
-      </nav>
-    </header>
-    <main class="text-center m-0">
-      {{{ body }}}
-    </main>
-    <footer class="fixed-bottom bg-dark text-center text-white">
-      <!-- Grid container -->
-      <div class="container pt-4">
-        <!-- Linkedin -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-linkedin-in"></i></a>
-        <!-- Github -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-github"></i></a>
-      </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-      crossorigin="anonymous"></script>
-  </body>
+      {{!--
+    </nav> --}}
+  </header>
+  <main class="text-center m-0">
+    {{{ body }}}
+  </main>
+  <footer class="fixed-bottom bg-dark text-center text-white">
+    <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-linkedin-in"></i></a>
+    <!-- Github -->
+    <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-github"></i></a>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
+</body>
 
 </html>
