--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,6 +25,21 @@ a {
 .btn,
 .btn-lg {
   background-color: blueviolet;
+  font-family: Sora;
+}
+
+.btn {
+  border: none;
+}
+.btn {
+  color: white;
+}
+
+.btn:hover{
+  background-color: blueviolet;
+}
+.nav-height {
+  padding: .5rem;
 }
 
 .btn-sizing {
@@ -98,6 +113,11 @@ video {
   border-radius: 3px;
   outline: none;
   color: #fff;
+  font-family: Sora;
+}
+
+h6 {
+  font-family: Sora;
 }
 
 #messages {
@@ -108,10 +128,13 @@ video {
 
 #messages > li {
   padding: 0.5rem 1rem;
+  font-family: Sora;
+  background-color: ;
+  border-radius: 10px;
 }
 
 #messages > li:nth-child(odd) {
-  background: #efefef;
+  background: rgb(209, 182, 235);
 }
 .card {
   margin: 2em;
@@ -121,6 +144,7 @@ video {
   padding-bottom: 3rem;
   position: relative;
   overflow: scroll;
+  background-color: ;
 }
 #form {
   background: rgba(0, 0, 0, 0.15);
