--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,7 @@
 
 <body>
   <header class="text-center text-white">
-    <h1 class="pt-3">Viva Chat</h1>
+    <h1 id="header" class="">Viva Chat</h1>
     <!-- create login or logout link -->
 
     {{!-- <nav> --}}
