deleted redundant files, all pages use random.hndlbrs

--- a/views/random.handlebars
+++ b/views/random.handlebars
@@ -1,16 +1,16 @@
 <nav class="nav-height">
   <ul class="nav" style="justify-content: space-evenly; font-weight:450;">
     <li class="nav-item">
-      <a class="nav-link" href="/videochat">Main Room</a>
+      <a class="nav-link" href="/random/chat/videochat">Main Room</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/room1">Room 1</a>
+      <a class="nav-link" href="/random/chat/room1">Room 1</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/room2">Room 2</a>
+      <a class="nav-link" href="/random/chat/room2">Room 2</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/room3">Room 3</a>
+      <a class="nav-link" href="/random/chat/room3">Room 3</a>
     </li>
     <li>
       <button class="btn" type="submit" id="logout-btn"
