--- a/views/random.handlebars
+++ b/views/random.handlebars
@@ -12,6 +12,9 @@
     <li class="nav-item">
       <a class="nav-link" href="/random/chat/room3">Room 3</a>
     </li>
+     <li class="nav-item">
+      <a class="nav-link" id="random-room" href="/random">Room Roulette</a>
+    </li>
     <li>
       <button class="btn" type="submit" id="logout-btn"
         style="background: none; font-weight:450; font-size: 1.75vh">Logout</button>
