--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,12 +26,16 @@ a {
 h1 {
   font-size: 5vh;
   margin-bottom: 0;
+  padding: 0;
+  font-weight: 800
 }
 p {
   font-family: sora;
 }
 header{
   padding: 1rem;
+  background: rgb(80,37,176);
+  background: linear-gradient(22deg, rgba(80,37,176,1) 0%, rgba(146,0,185,1) 52%, rgba(255,151,81,1) 100%);
 }
 
 .nav-link {
@@ -54,12 +58,8 @@ header{
 .btn:hover{
   background-color: blueviolet;
 }
-.nav-height {
-  
-}
-h1 {
-  padding: 0;
-}
+
+
 .btn-sizing {
   width: 198px;
   height: 30px;
@@ -149,16 +149,18 @@ h6 {
 #messages > li {
   padding: 0.5rem 1rem;
   font-family: Sora;
-  background-color: ;
   border-radius: 10px;
 }
 
 #messages > li:nth-child(odd) {
-  background: rgb(209, 182, 235);
+  background: rgb(40,0,126);
+  
+background: linear-gradient(22deg, rgba(40,0,126,.2) 0%, rgba(157,0,199,.4) 52%, rgba(255,102,0,.3) 100%);
 }
 
 .card {
   margin: 2em;
+  border-style: red solid 10px;
 }
 
 .card-body {
@@ -175,7 +177,7 @@ h6 {
 }
 
 #form {
-  background: rgba(0, 0, 0, 0.15);
+  background: rgba(2, 1, 1, 0.15);
   padding: 0.25rem;
   position: absolute;
   bottom: 0;
