--- a/views/random.handlebars
+++ b/views/random.handlebars
@@ -12,7 +12,7 @@
     <li class="nav-item">
       <a class="nav-link" href="/random/chat/room3">Room 3</a>
     </li>
-     <li class="nav-item">
+    <li class="nav-item">
       <a class="nav-link" id="random-room" href="/random">Room Roulette</a>
     </li>
     <li>
@@ -25,11 +25,11 @@
 
 <div class="container-fluid container-height">
   <div class="row h-100">
-    <div class="col-8">
+    <div class="col-lg-9 col-sm-12">
       <section id="video-grid"></section>
     </div>
-    <div class="col-4">
-      <div class="card" style="width: 65%; height: 90%">
+    <div class="col-lg-3 col-sm-12">
+      <div class="card" style="width: 85%; height: 90%">
         <h6 class="card-subtitle chat-box-title" style="height: 1rem; color: black;">
           Chat Box
         </h6>
@@ -38,7 +38,8 @@
           <ul data-name="{{username}}" id="messages"></ul>
         </div>
         <form id="form" action="">
-          <input id="input" autocomplete="off" style="width: 80%;" /><button>Send</button>
+          <input id="input" autocomplete="off" style="width: 70%;" /><button
+            class="btn btn-primary btn-sizing">Send</button>
         </form>
       </div>
     </div>
