--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,3 @@
-/* .jumbotron {
-  background-image: url("../image/image1.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 100vh;
-} */
-
 @import url("https://fonts.googleapis.com/css2?family=Sora:wght@400;800&display=swap");
 
 /* Header */
@@ -32,10 +24,6 @@ h1 {
   font-weight: 800;
 }
 
-p {
-  font-family: sora;
-}
-
 header {
   padding: 1rem;
   height: 10vh;
@@ -48,8 +36,28 @@ header {
   );
 }
 
-.nav-link {
-  font-size: 1.75vh;
+/* body */
+main {
+  height: 80vh;
+}
+
+p {
+  font-family: sora;
+}
+
+.btn {
+  border: none;
+  color: white;
+}
+
+.btn-sizing {
+  width: 198px;
+  height: 30px;
+  line-height: normal;
+}
+
+.btn:hover {
+  background-color: blueviolet;
 }
 
 .text-white,
@@ -59,23 +67,8 @@ header {
   font-family: Sora;
 }
 
-.btn {
-  border: none;
-  color: white;
-}
-
-.btn:hover {
-  background-color: blueviolet;
-}
-
-main {
-  height: 80vh;
-}
-
-.btn-sizing {
-  width: 198px;
-  height: 30px;
-  line-height: normal;
+.nav-link {
+  font-size: 1.75vh;
 }
 
 input {
@@ -198,7 +191,7 @@ h6 {
   outline: none;
   color: #fff;
   font-family: Sora;
-  width: 30%;
+  width: 40%;
 }
 
 .chat-box-title {
