--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -1,31 +1,29 @@
-{{!-- <div class="jumbotron jumbotron-fluid"> --}}
-  <div class="container">
-    <div class="row justify-content-center pt-3">
-      <div class="col-md-6 shadow-lg p-3 mt-5 rounded">
-        <p class="text-dark"> Welcome to our video chat application! Please login or make an account to proceed to the
-          main lobby. Once you are in the room, you will need to allow video and microphone access in order to join the
-          videochat. </p>
-
-        <h2 class="text-dark">Login</h2>
-        <form class="form login-form">
-          <div class="form-group text-dark row justify-content-center">
-            {{!-- <label for="email-login">Email:</label> --}}
-            <input class="form-input" type="text" id="email-login" placeholder="Insert Email" />
-          </div>
-          <div class="form-group text-dark row justify-content-center">
-            {{!-- <label for="password-login">Password:</label> --}}
-            <input class="form-input" type="password" id="password-login" placeholder="Insert Password" />
-          </div>
-
-          <div class="row justify-content-center mb-3">
-            <button class="btn btn-primary btn-sizing" type="submit">Login</button>
-          </div>
-          <div class="row justify-content-center">
-            <a class="btn btn-primary btn-sizing" href="/create-account">Create Account</a>
-          </div>
-        </form>
-      </div>
+<div class="container">
+  <div class="row justify-content-center pt-3">
+    <div class="col-md-6 shadow-lg p-3 mt-5 rounded">
+      <p class="text-dark"> Welcome to our video chat application! Please login or make an account to proceed to the
+        main lobby. Once you are in the room, you will need to allow video and microphone access in order to join the
+        videochat. If you are using windows, turn off other video cameras app in order to display your video.</p>
+      {{!-- Login form --}}
+      <h2 class="text-dark">Login</h2>
+      <form class="form login-form">
+        <div class="form-group text-dark row justify-content-center">
+          <input class="form-input" type="text" id="email-login" placeholder="Insert Email" />
+        </div>
+        <div class="form-group text-dark row justify-content-center">
+          <input class="form-input" type="password" id="password-login" placeholder="Insert Password" />
+        </div>
+        {{!-- submit login form --}}
+        <div class="row justify-content-center mb-3">
+          <button class="btn btn-primary btn-sizing" type="submit">Login</button>
+        </div>
+        {{!-- register new account page --}}
+        <div class="row justify-content-center">
+          <a class="btn btn-primary btn-sizing" href="/create-account">Create Account</a>
+        </div>
+      </form>
     </div>
   </div>
+</div>
 
-  <script src="js/login.js"></script>
+<script src="js/login.js"></script>
