--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,32 +19,27 @@
   <title>Viva Chat</title>
 </head>
 
-
 <body>
   <header class="text-center text-white">
     <h1 id="header" class="">Viva Chat</h1>
-    <!-- create login or logout link -->
-
-    {{!-- <nav> --}}
-      {{!-- Conditionally render login or logout links
-      {{#if logged_in}}
-      <a href="/profile">profile</a> |
-      <button class="no-button" id="logout">logout</button>
-      {{else}}
-      <a href="/login">login</a>
-      {{/if}} --}}
-
-      {{!--
-    </nav> --}}
   </header>
+  {{!-- Includes all other handlebars --}}
   <main class="text-center m-0">
     {{{ body }}}
   </main>
   <footer class="fixed-bottom bg-dark text-center text-white">
     <div class="footer-container">
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-linkedin-in"></i></a>
+      {{!-- LinkedIn --}}
+      <a class="btn btn-outline-light btn-floating m-1" target="_blank"
+        href="https://www.linkedin.com/in/gabriel-warner-083ab4211/" role="button"><i
+          class="fab fa-linkedin-in"></i></a>
+      <a class="btn btn-outline-light btn-floating m-1" target="_blank"
+        href="https://www.linkedin.com/in/justus-b-8a1158108/" role="button"><i class="fab fa-linkedin-in"></i></a>
+      <a class="btn btn-outline-light btn-floating m-1" target="_blank"
+        href="https://www.linkedin.com/in/zhao-ming-zhong/" role="button"><i class="fab fa-linkedin-in"></i></a>
       <!-- Github -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-github"></i></a>
+      <a class="btn btn-outline-light btn-floating m-1" target="_blank"
+        href="https://github.com/brownj47/random-video-chat" role="button"><i class="fab fa-github"></i></a>
     </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.bundle.min.js"
