--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,23 +1,22 @@
 <div class="container">
   <div class="row justify-content-center pt-3">
     <div class="col-md-6 shadow-lg p-3 mt-5 rounded">
-
       <div class="row justify-content-center">
-
         <div class="col-md-4">
+          {{!-- login form --}}
           <h2 class="text-dark">Login</h2>
           <form class="form login-form">
             <div class="form-group text-dark row justify-content-center">
-              {{!-- <label for="email-login">email:</label> --}}
               <input class="form-input" type="text" id="email-login" placeholder="Insert Email" />
             </div>
             <div class="form-group text-dark row justify-content-center">
-              {{!-- <label for="password-login">password:</label> --}}
               <input class="form-input" type="password" id="password-login" placeholder="Insert Password" />
             </div>
+            {{!-- submit login --}}
             <div class="row justify-content-center mb-3">
               <button class="btn btn-primary btn-sizing" type="submit">Login</button>
             </div>
+            {{!-- goes to register an account --}}
             <div class="row justify-content-center">
               <a class="btn btn-primary btn-sizing" href="/create-account">Create Account</a>
             </div>
@@ -27,4 +26,5 @@
     </div>
   </div>
 </div>
+
 <script src="js/login.js"></script>
