--- a/views/random.handlebars
+++ b/views/random.handlebars
@@ -1,3 +1,4 @@
+{{!-- navigation bar --}}
 <nav class="nav-height">
   <ul class="nav" style="justify-content: space-evenly; font-weight:450;">
     <li class="nav-item">
@@ -25,9 +26,11 @@
 
 <div class="container-fluid container-height">
   <div class="row h-100">
+    {{!-- video display --}}
     <div class="col-lg-9 col-sm-12">
       <section id="video-grid"></section>
     </div>
+    {{!-- chat box --}}
     <div class="col-lg-3 col-sm-12">
       <div class="card" style="width: 85%; height: 90%">
         <h6 class="card-subtitle chat-box-title" style="height: 1rem; color: black;">
@@ -37,8 +40,9 @@
           {{!-- setting the data attribute as the username so we can grab this in the DOM --}}
           <ul data-name="{{username}}" id="messages"></ul>
         </div>
+        {{!-- chat box send button --}}
         <form id="form" action="">
-          <input id="input" autocomplete="off" style="width: 70%;" /><button
+          <input id="input" autocomplete="off" style="width: 60%;" /><button
             class="btn btn-primary btn-sizing">Send</button>
         </form>
       </div>
