--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -2,28 +2,25 @@
   <div class="row justify-content-center pt-3">
     <div class="col-md-6 shadow-lg p-3 mb-5 rounded">
       <div class="row justify-content-center">
-
         <div class="col-4">
+          {{!-- signup form --}}
           <h2 class="text-dark">Signup</h2>
           <form class="form signup-form">
             <div class="form-group text-dark row justify-content-center">
-              {{!-- <label for="name-signup">Name:</label> --}}
               <input class="form-input" type="text" id="name-signup" placeholder="Insert Your Name" />
             </div>
             <div class="form-group text-dark row justify-content-center">
-              {{!-- <label for="email-signup">Email:</label> --}}
               <input class="form-input" type="text" id="email-signup" placeholder="Insert Your Email" />
             </div>
             <div class="form-group text-dark row justify-content-center">
-              {{!-- <label for="password-signup">Password:</label> --}}
               <input class="form-input" type="password" id="password-signup" placeholder="Insert Your Password" />
             </div>
+            {{!-- submit signup --}}
             <div class="form-group form-button row justify-content-center">
               <button class="btn btn-primary btn-sizing" type="submit">Signup</button>
             </div>
           </form>
         </div>
-
       </div>
     </div>
   </div>
