menu resp on small screens

--- a/views/random.handlebars
+++ b/views/random.handlebars
@@ -1,18 +1,18 @@
 <nav class="nav-height">
-  <ul class="nav" style="justify-content: space-evenly; font-weight:450;">
-    <li class="nav-item">
+  <ul class="row justify-content-around" style=" font-weight:450;">
+    <li class="nav-item  col-sm-12 col-md-12 col-lg-1">
       <a class="nav-link" href="/random/chat/videochat">Main Room</a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item col-sm-12 col-md-12 col-lg-1">
       <a class="nav-link" href="/random/chat/room1">Room 1</a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item col-sm-12 col-md-12 col-lg-1">
       <a class="nav-link" href="/random/chat/room2">Room 2</a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item col-sm-12 col-md-12 col-lg-1">
       <a class="nav-link" href="/random/chat/room3">Room 3</a>
     </li>
-     <li class="nav-item">
+     <li class="nav-item col-sm-12 col-md-12 col-lg-1">
       <a class="nav-link" id="random-room" href="/random">Room Roulette</a>
     </li>
     <li>
