chat box does not grow anymore

--- a/views/random.handlebars
+++ b/views/random.handlebars
@@ -31,7 +31,7 @@
       <section id="video-grid"></section>
     </div>
     {{!-- chat box --}}
-    <div class="col-lg-3 col-sm-12">
+    <div class="col-lg-3 col-sm-12" style="height: 100%;">
       <div class="card" style="width: 85%; height: 90%">
         <h6 class="card-subtitle chat-box-title" style="height: 1rem; color: black;">
           Chat Box
