--- a/public/css/style.css
+++ b/public/css/style.css
@@ -129,6 +129,8 @@ h6 {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  height: 100%;
+  white-space: nowrap;
 }
 
 #messages > li {
@@ -156,6 +158,8 @@ h6 {
 .card {
   margin: 2em;
   border-style: red solid 10px;
+  height: 100%;
+  white-space: nowrap;
 }
 
 .card-body {
@@ -164,6 +168,7 @@ h6 {
   position: relative;
   overflow: scroll;
   white-space: nowrap;
+
 }
 
 #messages {
