center and responsive chat

--- a/views/random.handlebars
+++ b/views/random.handlebars
@@ -24,12 +24,12 @@
 
 
 <div class="container-fluid container-height">
-  <div class="row h-100">
-    <div class="col-8">
+  <div class="row">
+    <div class="col-sm-12 col-lg-8">
       <section id="video-grid"></section>
     </div>
-    <div class="col-4">
-      <div class="card" style="width: 65%; height: 90%">
+    <div class=" col-sm-12 col-lg-4">
+      <div class="card">
         <h6 class="card-subtitle chat-box-title" style="height: 1rem; color: black;">
           Chat Box
         </h6>
