--- a/public/css/style.css
+++ b/public/css/style.css
@@ -159,7 +159,7 @@ background: linear-gradient(22deg, rgba(40,0,126,.2) 0%, rgba(157,0,199,.4) 52%,
 }
 
 .card {
-  margin: 2em;
+  margin: 2em auto;
   border-style: red solid 10px;
 }
 
