--- a/views/random.handlebars
+++ b/views/random.handlebars
@@ -1,22 +1,22 @@
 <nav class="nav-height">
   <ul class="row justify-content-around" style=" font-weight:450;">
-    <li class="nav-item  col-sm-12 col-md-12 col-lg-1">
+    <li class="nav-item  col-sm-12 col-md-12 col-lg-1 ">
       <a class="nav-link" href="/random/chat/videochat">Main Room</a>
     </li>
-    <li class="nav-item col-sm-12 col-md-12 col-lg-1">
+    <li class="nav-item col-sm-12 col-md-12 col-lg-1 ">
       <a class="nav-link" href="/random/chat/room1">Room 1</a>
     </li>
-    <li class="nav-item col-sm-12 col-md-12 col-lg-1">
+    <li class="nav-item col-sm-12 col-md-12 col-lg-1 ">
       <a class="nav-link" href="/random/chat/room2">Room 2</a>
     </li>
-    <li class="nav-item col-sm-12 col-md-12 col-lg-1">
+    <li class="nav-item col-sm-12 col-md-12 col-lg-1 ">
       <a class="nav-link" href="/random/chat/room3">Room 3</a>
     </li>
-     <li class="nav-item col-sm-12 col-md-12 col-lg-1">
+     <li class="nav-item col-sm-12 col-md-12 col-lg-1 ">
       <a class="nav-link" id="random-room" href="/random">Room Roulette</a>
     </li>
-    <li>
-      <button class="btn" type="submit" id="logout-btn"
+    <li class="nav-item col-sm-12 col-md-12 col-lg-1 ">
+      <button class="btn " type="submit" id="logout-btn"
         style="background: none; font-weight:450; font-size: 1.75vh">Logout</button>
     </li>
   </ul>
@@ -28,7 +28,7 @@
     <div class="col-sm-12 col-lg-8">
       <section id="video-grid"></section>
     </div>
-    <div class=" col-sm-12 col-lg-4">
+    <div class=" col-sm-12 col-lg-4" style="max-height: 50%;">
       <div class="card">
         <h6 class="card-subtitle chat-box-title" style="height: 1rem; color: black;">
           Chat Box
