--- a/views/random.handlebars
+++ b/views/random.handlebars
@@ -31,8 +31,8 @@
       <section id="video-grid"></section>
     </div>
     {{!-- chat box --}}
-    <div class="col-lg-3 col-sm-12" style="height: 100%;">
-      <div class="card" style="width: 85%; height: 90%">
+    <div class="col-lg-3 col-sm-12 mb-5" style="height: 80%; ">
+      <div class="card" style="width: 85%;">
         <h6 class="card-subtitle chat-box-title" style="height: 1rem; color: black;">
           Chat Box
         </h6>
