--- a/views/random.handlebars
+++ b/views/random.handlebars
@@ -2,7 +2,7 @@
 <nav class="nav-height">
   <ul class="row justify-content-around" style=" font-weight:450;">
     <li class="nav-item  col-sm-12 col-md-12 col-lg-2 ">
-      <a class="nav-link" href="/random/chat/videochat">Main Room</a>
+      <a class="nav-link" href="/random/chat/mainroom">Main Room</a>
     </li>
     <li class="nav-item col-sm-12 col-md-12 col-lg-2 ">
       <a class="nav-link" href="/random/chat/room1">Room 1</a>
