--- a/views/random.handlebars
+++ b/views/random.handlebars
@@ -27,11 +27,11 @@
 <div class="container-fluid container-height">
   <div class="row h-100">
     {{!-- video display --}}
-    <div class="col-lg-9 col-sm-12">
+    <div class="col-lg-8 col-md-7 col-sm-12">
       <section id="video-grid"></section>
     </div>
     {{!-- chat box --}}
-    <div class="col-lg-3 col-sm-12 mb-5" style="height: 80%; ">
+    <div class="col-lg-4  col-md-5 col-sm-12 mb-5" style="height: 80%; ">
       <div class="card" style="width: 85%;">
         <h6 class="card-subtitle chat-box-title" style="height: 1rem; color: black;">
           Chat Box
