Names in footer

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -34,12 +34,11 @@
     <div class="footer-container">
       {{!-- LinkedIn --}}
       <a class="btn btn-outline-light btn-floating m-1" target="_blank"
-        href="https://www.linkedin.com/in/gabriel-warner-083ab4211/" role="button"><i
-          class="fab fa-linkedin-in"></i></a>
+        href="https://www.linkedin.com/in/gabriel-warner-083ab4211/" role="button">Gabriel Warner</a>
       <a class="btn btn-outline-light btn-floating m-1" target="_blank"
-        href="https://www.linkedin.com/in/justus-b-8a1158108/" role="button"><i class="fab fa-linkedin-in"></i></a>
+        href="https://www.linkedin.com/in/justus-b-8a1158108/" role="button"> Justus Brown</a>
       <a class="btn btn-outline-light btn-floating m-1" target="_blank"
-        href="https://www.linkedin.com/in/zhao-ming-zhong/" role="button"><i class="fab fa-linkedin-in"></i></a>
+        href="https://www.linkedin.com/in/zhao-ming-zhong/" role="button"> Zhao-Ming Zhong</a>
       <!-- Github -->
       <a class="btn btn-outline-light btn-floating m-1" target="_blank"
         href="https://github.com/brownj47/random-video-chat" role="button"><i class="fab fa-github"></i></a>
